Add default Grain memory settings for JVM